fix: restaurant card styling & responsiveness on mobile

--- a/front-end/src/Styles/Restaurant.css
+++ b/front-end/src/Styles/Restaurant.css
@@ -35,10 +35,12 @@ body{
 .restaurant-data{
     color: black;
     text-align: left;
-    background-color: white;
+    background-color: rgba(231, 231, 231, 0.726);
     font-family:'Open Sans', sans-serif;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .restaurant-data:hover{
@@ -53,7 +55,7 @@ body{
 }
 
 .image-container img{
-    width: 344px;
+    width: 333px;
     height: 210px;
     border-radius: 0px;
     position: relative;
@@ -84,6 +86,7 @@ body{
     margin-left: 10px;
     padding-bottom:20px;
 }
+
 
 @media only screen and (max-width: 375px) {
     .all-restaurants-container{
@@ -121,11 +124,9 @@ body{
     .restaurant-container:hover {
         max-width: 173px; 
     }
-   
 
     .restaurant-address{
         font-size: 10px;
-        color:rgb(236, 236, 236);
         margin: 10px;
         padding-bottom: 10px;
     }
@@ -140,7 +141,7 @@ body{
     } 
 
     .image-container img{
-        width: 173px;
+        width: 163px;
         height: 100px;
         border-radius: 0px;
         position: relative;
