--- a/front-end/src/Styles/home.css
+++ b/front-end/src/Styles/home.css
@@ -72,7 +72,7 @@ body{
         font-size: 20px;
         color: blue;
         text-align: center;
-        line-height: 150px;
+        line-height: 56px;
       
     }
     
